--- a/portus/templates/nginx-service.yaml
+++ b/portus/templates/nginx-service.yaml
@@ -7,6 +7,10 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  annotations:
+    {{- range $key, $value := .Values.nginx.service.annotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   selector:
     name: {{ template "nginx.fullname" . }}
