--- a/portus/templates/portus-deployment.yaml
+++ b/portus/templates/portus-deployment.yaml
@@ -1,7 +1,9 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "portus.fullname" . }} 
+  name: {{ template "portus.fullname" . }}
+  annotations:
+    checksum/config: {{ include (print $.Template.BasePath "/portus-configmap.yaml") . | sha256sum }}
   labels:
     name: {{ template "portus.fullname" . }}
     app: {{ template "name" . }}
@@ -30,11 +32,14 @@ spec:
           ports:
             - containerPort: {{ .Values.portus.service.port }}
           livenessProbe:
-            exec:
-              command:
-                - /api/v1/health
+            httpGet:
+              {{- if .Values.portus.tls.enabled }}
+              scheme: HTTPS
+              {{- end }}
+              path: /api/v1/_ping
+              port: {{ .Values.portus.service.port }}
             initialDelaySeconds: 240
-            periodSeconds: 5
+            timeoutSeconds: 10
           env:
             - name: PORTUS_MACHINE_FQDN_VALUE
               value: {{ template "portus.fullname" . }}
@@ -47,6 +52,13 @@ spec:
               value: {{ .Values.mariadb.mariadbDatabase | quote }}
             - name: PORTUS_DB_USERNAME
               value: {{ .Values.mariadb.mariadbUser | quote }}
+            {{- if .Values.portus.config.ldap.authentication.enabled }}
+            - name: PORTUS_LDAP_AUTHENTICATION_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "portus.fullname" . }}
+                  key: PORTUS_LDAP_AUTHENTICATION_PASSWORD
+            {{- end }}
             - name: PORTUS_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -62,7 +74,7 @@ spec:
             - name: PORTUS_DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ template "portus.fullname" . }}  
+                  name: {{ template "portus.fullname" . }}
                   key: PORTUS_PRODUCTION_PASSWORD
             {{- end }}
             - name: PORTUS_KEY_PATH
@@ -79,6 +91,11 @@ spec:
               value: {{ template "portus.fullname" . }} # :{{ .Values.portus.service.port }}
             - name: RAILS_SERVE_STATIC_FILES
               value: "true"
+            - name: PORTUS_LOG_LEVEL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "portus.fullname" . }}
+                  key: log_level
             - name: PORTUS_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -121,6 +138,11 @@ spec:
                   name: {{ template "mariadb.fullname" . }}
                   key: mariadb-password
             {{- else }}
+            - name: PORTUS_LOG_LEVEL
+              valueFrom:
+                configMapKeyRef:
+                  name: {{ template "portus.fullname" . }}
+                  key: log_level
             - name: PORTUS_DB_HOST
               value: {{ .Values.portus.dbHost }}
             - name: PORTUS_DB_DATABASE
