--- a/portus/templates/portus-secret.yaml
+++ b/portus/templates/portus-secret.yaml
@@ -21,6 +21,10 @@ data:
   PORTUS_SECRET_KEY_BASE: {{ randAlphaNum 128 | b64enc | quote }}
   {{- end }}
 
+  {{- if .Values.portus.config.ldap.authentication.enabled }}
+  PORTUS_LDAP_AUTHENTICATION_PASSWORD: {{ .Values.portus.config.ldap.authentication.bind_pwd | b64enc | quote }}
+  {{- end }}
+
   {{- if eq .Values.mariadb.enabled false }}
   PORTUS_PRODUCTION_PASSWORD: {{ .Values.portus.productionPassword | b64enc | quote }}
   {{- end }}
