Update harbor chart. Add label attr to volumes.

--- a/harbor/templates/adminserver/adminserver-ss.yaml
+++ b/harbor/templates/adminserver/adminserver-ss.yaml
@@ -60,6 +60,8 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: adminserver-config
+      labels:
+{{ toYaml .Values.adminserver.volumes.labels | indent 8 }}
     spec:
       accessModes: [{{ .Values.adminserver.volumes.config.accessMode | quote }}]
       {{- if .Values.adminserver.volumes.config.storageClass }}
