--- a/harbor/templates/mysql/mysql-ss.yaml
+++ b/harbor/templates/mysql/mysql-ss.yaml
@@ -43,6 +43,7 @@ spec:
   - metadata:
       name: "mysql-data"
       labels:
+{{ toYaml .Values.mysql.volumes.labels | indent 8 }}
 {{ include "harbor.labels" . | indent 8 }}
     spec:
       accessModes: [{{ .Values.mysql.volumes.data.accessMode | quote }}]
