--- a/harbor/templates/mysql/mysql-ss.yaml
+++ b/harbor/templates/mysql/mysql-ss.yaml
@@ -38,7 +38,18 @@ spec:
       - name: "mysql-data"
         emptyDir: {}
       {{- end -}}
+
   {{- if .Values.persistence.enabled }}
+
+    {{- if .Values.mysql.existingClaim }}
+
+      volumes:
+      - name: "mysql-data"
+        persistentVolumeClaim: 
+          claimName: {{ Values.mysql.existingClaim }}
+
+    {{- else }}
+
   volumeClaimTemplates:
   - metadata:
       name: "mysql-data"
@@ -57,4 +68,7 @@ spec:
       resources:
         requests:
           storage: {{ .Values.mysql.volumes.data.size | quote }}
+  
+    {{- end -}} 
+
   {{- end -}}
