--- a/harbor/values.yaml
+++ b/harbor/values.yaml
@@ -78,6 +78,7 @@ adminserver:
     timeout: "5"
     verifyCert: "True"
   ## Persist data to a persistent volume
+  existingClaim:
   volumes:
     config:
       # storageClass: "-"
@@ -181,6 +182,7 @@ mysql:
   user: "root"
   pass: "registry"
   database: "registry"
+  existingClaim:
   volumes:
     data:
       # storageClass: "-"
@@ -244,6 +246,7 @@ registry:
     Jag500bEBxqI2RLELgMt/bUdjp4N2M7mrxdrN+2579HTzb6Hviu9
     -----END CERTIFICATE-----
   ## Persist data to a persistent volume
+  existingClaim:
   volumes:
     data:
       # storageClass: "-"
